--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "lucide": "^0.507.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
