--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide": "^0.507.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.2.0",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
@@ -22,6 +27,7 @@
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
