--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "lucide": "^0.507.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0",
+    "theme": "^0.1.0",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
