--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-youtube": "^10.1.0",
     "tailwind-merge": "^3.2.0",
     "theme": "^0.0.8",
     "usehooks-ts": "^3.1.1"
